# robbot_serving_DEMO

./: README.md
description/calibration_scene_description/: CMakeLists.txt  package.xml
description/calibration_scene_description/urdf/: calibration_scene_description.urdf  calibration_scene_description.xacro
description/camera_calibration_tool_irb120/: CMakeLists.txt  package.xml
description/camera_calibration_tool_irb120/launch/: display.launch  gazebo.launch
description/camera_calibration_tool_irb120/meshes/: calib_chessboard.STL  calib_chessboard_mount.STL  calib_irb120_mount.STL
description/camera_calibration_tool_irb120/textures/: camera_calibration_tool_with_texture.ttt  chessboard_with_texture.ttm
description/camera_calibration_tool_irb120/urdf/: camera_calibration_tool_irb120.csv  camera_calibration_tool_irb120.urdf  camera_calibration_tool_irb120.xacro  camera_calibration_tool_irb120_macro.xacro
description/demo_table_final/: CMakeLists.txt  package.xml
description/demo_table_final/launch/: display.launch  (+1 more)
description/full_scene_description/: CMakeLists.txt  package.xml
driver/robotiq/: README.md
moveit_config/irb120_calibration_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config/irb120_demo_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config/irb120_serving_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config/test_scene_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
scenes/: scene.ttt
scenes/material/: cup.STL  plate.STL
task/lg_task/: CMakeLists.txt  package.xml
(+133 files in other folders)
